--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-<h1>Proyecto 3313637</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Proyecto3313637</title>
+</head>
+<body>
+ <h1>Proyecto 3313637</h1>   
+ <h1>** Etiquetas **</h1>
+ <h1>Nazly Ramirez</h1>
+ <h2>Nazly Ramirez</h2>
+ <h3>Nazly Ramirez</h3>
+ <h4>Nazly Ramirez</h4>
+ <h5>Nazly Ramirez</h5>
+ <h6>Nazly Ramirez</h6>
+
+ <h1>** Viñetas **</h1>
+ <ul>
+    <li> Rebook</li>
+    <li>Jordan</li>
+    <li>Nike</li>
+    <li>Adidas</li>
+<h1>** Viñetas **</h1>
+ <ol>
+    <li> Rebook</li>
+    <li>Jordan</li>
+    <li>Nike</li>
+    <li>Adidas</li>
+
+</body>
+</html>
