Actualizacion hasta formulario

--- a/index.html
+++ b/index.html
@@ -28,5 +28,51 @@
     <li>Nike</li>
     <li>Adidas</li>
 
+     <h1>**Tablas**</h1>
+    <table border="1"
+        <tr>
+            <td>Nombres</td>
+            <td>Apellidos</td>
+            <td>Correo</td>
+            <td>Contraseña</td>
+        </tr>
+
+
+
+
+    <h1>**Tablas**</h1>
+    <table border="1"
+        <tr>
+            <td>Nazly</td>
+            <td>Vanessa</td>
+            <td>Ramirez</td>
+            <td>Gomez</td>
+            <table></table>
+
+
+<h1>**Formulario**</h1>
+<form>
+    <label for="Nombre">Nombre</label>
+    <input type="text" id="Nombre" name="Nombre" placeholder="Introduce tu nombre">
+        <br>
+
+
+    <label for="Apellido">Apellido</label>
+    <input type="text" id="Apellido" name="Apellido" placeholder="Introduce tu apellido">
+    <br>
+
+
+    <label for="Correo">Correo</label>
+    <input type="email" id="Correo" name="Correo" placeholder="Introduce tu Correo">
+    <br>
+
+
+    <label for="Contraseña">Contraseña</label>
+    <input type="password" id="Contraseña" name="Contraseña" placeholder="Introduce tu Contraseña">
+    <br>
+
+
+<input type="submit" value="Enviar"
+
 </body>
 </html>
