Actualizado hasta Radio-Checkbox

--- a/index.html
+++ b/index.html
@@ -52,6 +52,18 @@
 
 <h1>**Formulario**</h1>
 <form>
+
+    <h2>**Botones de radio</h2>
+    <label for=""><input type="Radio"> Interior</label>
+    <label for=""><input type="Radio"> Exterior</label>
+
+    <h2>Botones de chequeo</h2>
+    <label for=""><input type="Checkbox"> Perros</label>
+    <label for=""><input type="Checkbox"> Gatos</label>
+    <label for=""><input type="Checkbox"> Otros</label>
+
+    <hr>
+
     <label for="Nombre">Nombre</label>
     <input type="text" id="Nombre" name="Nombre" placeholder="Introduce tu nombre">
         <br>
@@ -71,8 +83,16 @@
     <input type="password" id="Contraseña" name="Contraseña" placeholder="Introduce tu Contraseña">
     <br>
 
+    <label for="Genero">Genero</label>
+    <select name="" id="">
+        <option value="Mujer">Mujer</option>
+        <option value="Hombre">Hombre</option>
+        <option value="Otro">Otro</option>
+    </select>
+    <br>
 
 <input type="submit" value="Enviar"
+
 
 </body>
 </html>
