Actualizado hasta cargue de imagenes

--- a/index.html
+++ b/index.html
@@ -91,8 +91,12 @@
     </select>
     <br>
 
-<input type="submit" value="Enviar"
+<input type="submit" value="Enviar">
 
-
+<hr>
+<h2>Imagenes</h2>
+    <img src="https://static.vecteezy.com/system/resources/previews/003/058/260/non_2x/star-sky-illustration-background-free-vector.jpg" width="400" height="300" alt="Un cielo nocturno estrellado">
+    <img src="Sakura.Webp"alt="Arból de Sakura" width="400" height="300">
+    <img src="./img/Simulanka.jpg" alt="Simulanka" width="400" height="300">
 </body>
 </html>
